// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package p11_grpc;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

service P11 {
  rpc ChooseScheme (ChooseSchemeRequest) returns (ChooseSchemeResponse) {}
  rpc Sign (SignRequest) returns (SignResponse) {}
}

message ChooseSchemeRequest {
  repeated string offered = 1;
}

message ChooseSchemeResponse {
  string chosen = 1; // Chosen scheme
}

message SignRequest {
  bytes data = 1;
}

message SignResponse {
  bytes signature = 1;
}
